--- a/docs/Notes/BlockChain/暗号資産.md
+++ b/docs/Notes/BlockChain/暗号資産.md
@@ -1,29 +1,47 @@
+# 00.ブロックチェーンの特性
 
-# 暗号資産（CryptoCurrency[クリプトカレンシー]）を用いた開発
+```plantuml
 
----
+@startmindmap
 
-## ブロックチェーン、イーサリアム、スマートコンストラクタ入門
+title ブロックチェーンの特性
 
-### ブロックチェーンの特性
+*[#Orange] ブロックチェーン
 
-TCP/IP > P2P
+** 非中央集権型(Decentralization)
+***_:
+ネットワーク上の管理サーバーが壊れても
+アプリケーションやサービスが動き続ける;
 
-- 非中央集権型(Decentralization)
-    - 通常のアプリケーションやサービスはサーバーなどに管理するが、ネットワーク上のサーバーが壊れても、アプリケーションやサービスが動き続ける。
-- 分散型(Distributed)
-    - → ネットワーク上の多数のノード（端末）が相互に接続されている
-    - → 上記の技術を **P2P(Peer to Peer)**  という
-- データベース(Database)
-    - → 読んでそのまま
-- 台帳(Ledger)
-    - → 会計でよく使われている用語。取引や受送金、残高の記載など、一連のやり取りを記録するもの
-    - → 上記の記録を **トランザクション** という
+** 分散型(Distributed)
+***_:
+**【P2P(Peer to Peer)】**
+ネットワーク上の
+多数のノード（端末）が
+相互に接続されている;
 
-#### ブロックチェーン → ブロック(トランザクション群の箱)の連鎖
+** データベース(Database)
+***_:
+すべての取引をデータベースに保持し
+誰でもアクセルができる;
 
-- 非中央集権と分散を実現するために、ブロックチェーンが必要
-- ブロックは複数のトランザクション(取引)を格納したもの
+** 台帳(Ledger)
+***_:
+**【トランザクション】**
+取引や受送金、残高の記載など、
+一連のやり取りを記録するもの;
+
+left side
+
+@endmindmap
+
+```
+
+## ブロックチェーン
+
+ブロック(トランザクション群の箱)の連鎖
+
+- ブロックとは、複数のトランザクション(取引)を格納したもの
 - チェーンはそのブロックを繋げるもの  
     - 繋げることは誰でもできて、様々な暗号計算を行って誰か一人が繋ぐことができる。 → **マイニング**
     - 繋げるための暗号が必要 → 暗号通貨、暗号資産といわれる所以
@@ -33,6 +51,7 @@ TCP/IP > P2P
         - ![picture 4](img/7fca191ddec2187684b22e8734e7fc24044e17d2f7996c21c302126c681daeaf.png){:target="_blank"}  
             - `Latest Blocks`がブロックを繋げた記録
             - `Latest Transactions`が取引した記録
+- **非中央集権** と **分散** を実現するために、 **ブロックチェーン** が必要
   
 ---
 
