--- a/docs/Notes/BlockChain/暗号資産.md
+++ b/docs/Notes/BlockChain/暗号資産.md
@@ -39,13 +39,13 @@ left side
 
 ## ブロックチェーン
 
-ブロック(トランザクション群の箱)の連鎖
+ブロック（トランザクション群の箱）の連鎖
 
-- ブロックとは、複数のトランザクション(取引)を格納したもの
-- チェーンはそのブロックを繋げるもの  
-    - 繋げることは誰でもできて、様々な暗号計算を行って誰か一人が繋ぐことができる。 → **マイニング**
-    - 繋げるための暗号が必要 → 暗号通貨、暗号資産といわれる所以
-    - トランザクション群を暗号計算して繋げることで不可逆的に記録することができる → 不可逆的:変更することができない
+- ブロックとは、複数のトランザクション（取引）を格納したもの
+- チェーンはそのブロックをつなげるもの  
+    - つなげることは誰でもできて、さまざまな暗号計算を用いてつなぐことができる。 → **マイニング**
+    - つなげるための暗号が必要 → 暗号通貨、暗号資産といわれる所以
+    - トランザクション群を暗号計算してつなげることで不可逆的に記録することができる → 不可逆的:変更することのできない
     - すべての暗号通貨、暗号資産の実際の取引はネットワーク上にすべて公開されてる
         - ビットコインの実際の取引 - <https://www.blockchain.com/explorer>
         - ![picture 4](img/7fca191ddec2187684b22e8734e7fc24044e17d2f7996c21c302126c681daeaf.png){:target="_blank"}  
@@ -60,17 +60,17 @@ left side
 - 世界第二位の暗号通貨 ※第一位はビットコイン
 - 公式サイト - <https://ethereum.org/ja/> ※公式がより深くブロックチェーンついて学習できるが、ほとんど英語。。。
 - ビットコインでは、`コインの取引（トランザクション）`を発行してブロックを繋げていた
-- イーサリアムでは、`コインの取引以外に株や土地、デジタルコンテンツなど`様々取引を行えることができる
-- 幅広い取引ができるようになったため、イーサリアムベースで様々なテクノロジーが開発されている
-    - 非代替性トークン(NFT:Non-Fungible Token)
-    - 分散型金融(DeFi:Decentralized Finance)
-    - 分散型自律組織(DAO:Decentralized Autonomous Organization)
+- イーサリアムでは、`コインの取引以外に株や土地、デジタルコンテンツなど`さまざま取引を行えることができる
+- 幅広い取引ができるようになったため、イーサリアムベースでさまざまなテクノロジーが開発されている
+    - 非代替性トークン（NFT:Non-Fungible Token）
+    - 分散型金融（DeFi:Decentralized Finance）
+    - 分散型自律組織（DAO:Decentralized Autonomous Organization）
 - プラットフォームとしてイーサリアムが今日にいたるまで存在感を増している
 
-### スマートコンストラクタ
+### スマートコンストラクター
 
 - いろいろな取引を行うための技術としイーサリアムには取引（トランザクション）を自動で実行するスマートコンストラクという機能が存在する
-- スマートコンストラクタの開発には、`Solidity`という言語で開発している
+- スマートコンストラクターの開発には、`Solidity`という言語で開発している
 
 ---
 
