--- a/docs/Notes/Metaverse/0.metaverse.md
+++ b/docs/Notes/Metaverse/0.metaverse.md
@@ -59,15 +59,15 @@ left side
 ### 補足
 
 - 【VR（Virtual Reality）】: 仮想現実 - ヘッドマウントディスプレイや専用ゴーグルを体験できる世界
-- 【AR（Augmented Reality）】: 拡張現実 - 現実世界コンピュータの情報を画像やを重ね合わせたて現実世界をコンピュータ情報によって拡張した世界
-- 【MR（Mix Reality）】: 複合現実 - 現実現実と仮想現実をより密接に複合化された世界。拡張現実が情報の投影に対して、複合現実は仮想現実にあるものが触れることができるなどがより現実化したもの。
+- 【AR（Augmented Reality）】: 拡張現実 - 現実世界コンピューターの情報を画像やを重ね合わせたて現実世界をコンピューター情報によって拡張した世界
+- 【MR（Mix Reality）】: 複合現実 - 現実現実と仮想現実をより密接に複合化された世界。拡張現実が情報の投影に対して、複合現実は仮想現実にあるものが触れることのできるなどがより現実化したもの。
 - 【XR（Cross Reality）】: 上記の総称
 
-### 様々な定義
+### さまざまな定義
 
 ---
 
-- 三次元のシミュレーション空間（環境）を持つ **【（空間性）】**
+- 3次元のシミュレーション空間（環境）を持つ **【（空間性）】**
 - 自己投影性のためのオブジェクト（アバタ）が存在する **【（自己同一性）】**
 - 複数のアバタが、同一の三次元空間を共有することができる **【（同時接続性）】**
 - 空間内に、オブジェクト（アイテム）を創造することができる。 **【（創造性）】**
