--- a/docs/Notes/Metaverse/1.metaverse.md
+++ b/docs/Notes/Metaverse/1.metaverse.md
@@ -12,10 +12,12 @@
 
 ## 1-2. 機械と人間の融合
 
-- アラン・チューリングの計算の自動化から、`ノーバート・ウィーナー（1894-1964）`サイバネティクス
-- 生体を自動機械とみなし、自動制御の理論を適応した。
-- 人間の行動は、計測・認識・制御
+- `ノーバート・ウィーナー（1894-1964）`は、生体を自動機械とみなし自動制御の理論「サイバネティクス」を適応した。
+- 人間の行動原理は、人間の感覚（視覚、聴覚、嗅覚、味覚、触覚）を神経を通じ行動に起こす。
+- 「情報を **通信** し行動を **制御** する」こと自体を機械が行うという考え方が「サイバネティクス」と言われる。
+    - この発想が、さまざまな学問に影響を与え世界の機械と人間の融合を加速させた。
 
-> 参考資料  
+> [参考資料]  
 > 定数化とは - <https://www.nifs.ac.jp/info/Unit-007.pdf>
 > 停止性問題 - <https://eng-blog.iij.ad.jp/archives/3095>
+> サイバネティックス－舵をとる人－ - <https://youtu.be/CNBPcimiLH0>
