--- a/docs/Notes/Metaverse/0.metaverse.md
+++ b/docs/Notes/Metaverse/0.metaverse.md
@@ -1,6 +1,6 @@
-# 00.メタバースとは何か？
+# 0.メタバースとは何か？
 
-## メタバースという言葉
+## 0-1.メタバースという言葉
 
 - **【メタバース】metaverseは、 【超越した】meta + 【世界】universe** を組み合わせた造語
     - 「スノウ・クラッシュ」(1992)に登場する仮想世界の名前 ※アメリカのSF作家・ニール・スティーヴンスンが1992年に発表したSF小説
@@ -8,7 +8,7 @@
     > <https://www.amazon.co.jp/gp/product/B09R4G6JQ9?ref_=dbs_p_mng_rwt_ser_shvlr&storeType=ebooks>  
     - 小説の中では、インターネット上の仮想空間（情報によって構築されたサイバー空間）として扱われている。
 
-## メタバースの定義
+## 0-2.メタバースの定義
 
 - 現実（Reality）とは別な第2の世界 = 仮想現実「VR（Virtual Reality)」という現実とは別のデジタル空間。
     - その特徴として以下の側面を持っている。
