--- a/docs/Notes/0.Metaverse/0.metaverse.md
+++ b/docs/Notes/0.Metaverse/0.metaverse.md
@@ -67,24 +67,31 @@ left side
 
 ---
 
-- 3次元のシミュレーション空間（環境）を持つ **【（空間性）】**
-- 自己投影性のためのオブジェクト（アバタ）が存在する **【（自己同一性）】**
-- 複数のアバタが、同一の三次元空間を共有することができる **【（同時接続性）】**
-- 空間内に、オブジェクト（アイテム）を創造することができる。 **【（創造性）】**
+#### アメリカ企業におけるメタバースの定義
 
-> 引用: メタバース進化論――仮想現実の荒野に芽吹く「解放」と「創造」の新世界 バーチャル美少女ねむ(著)  
+![img](img/20220529_214613.png)
+
+---
+!!! note
+    - 3次元のシミュレーション空間（環境）を持つ **【（空間性）】**  
+    - 自己投影性のためのオブジェクト（アバタ）が存在する **【（自己同一性）】**  
+    - 複数のアバタが、同一の3次元空間を共有することができる **【（同時接続性）】**  
+    - 空間内に、オブジェクト（アイテム）を創造することができる。 **【（創造性）】**  
+    > 引用: メタバース進化論 - 仮想現実の荒野に芽吹く「解放」と「創造」の新世界  
+    バーチャル美少女ねむ(著)  
+
+---
+!!! note
+    - メタバースですが、これはVR、AR、MR、XR、ミラー・ワールドのブランディングと言い切っていいでしょう。  
+    > 引用: メタバースとWeb3 國光 宏尚 (著)  
 
 ---
 
-- メタバースですが、これはVR、AR、MR、XR、ミラー・ワールドのブランディングと言い切っていいでしょう。
-
-> 引用: メタバースとWeb3 國光 宏尚 (著)  
+!!! note
+    - メタバースの世界は、カセットゲーム時代の『ドラゴンクエスト』のように「すでにでき上った完成品」ではありません。ネット上にオープンソースとしてアップロードされた世界は、ユーザーがいくらでも作り換えることが可能です。  
+    > 引用: 世界2.0　メタバースの歩き方と創り方 (幻冬舎単行本) 佐藤航陽  (著)  
 
 ---
-
-> 引用: 世界2.0　メタバースの歩き方と創り方 (幻冬舎単行本) 佐藤航陽  (著)  
-
-- メタバースの世界は、カセットゲーム時代の『ドラゴンクエスト』のように「すでにでき上った完成品」ではありません。ネット上にオープンソースとしてアップロードされた世界は、ユーザーがいくらでも作り換えることが可能です。
 
 ## 参考資料
 
@@ -97,3 +104,5 @@ left side
 > <https://www.amazon.co.jp/dp/B09W9B5Q6H/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1>  
 > 世界2.0　メタバースの歩き方と創り方 (幻冬舎単行本) 佐藤航陽  (著)  
 > <https://www.amazon.co.jp/dp/B09W98T3SX/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1>  
+> No.354 AR/VRを巡るプラットフォーム競争における日本企業の挑戦  
+> <https://www.dbj.jp/upload/investigate/docs/15b521ee498fac61aec71ff2d93da2e6_1.pdf>  
