--- a/docs/Notes/0.Metaverse/1.metaverse.md
+++ b/docs/Notes/0.Metaverse/1.metaverse.md
@@ -1,5 +1,27 @@
 # 1.より深いメタバース
 
+- 歴史的な観点からメタバースを深堀り
+
+```plantuml
+@startmindmap
+
+*[#Orange] 【メタバース】metaverse
+
+left side
+
+**_: AIを用いてコンピュータが自動で
+人間の認識のようにパターン化
+（ヒューマンセントリックなパターン化）;
+***: アラン・チューリングによる
+計算の自動化;
+***: ノーバート・ウィーナー
+機械と人間の融合
+（サイバネティクス）;
+
+
+@endmindmap
+```
+
 ## 1-1. 計算の自動化
 
 - メタバースは、現実世界をコンピューターの **計算** によってシミュレーションしたデジタル空間を実現しようとしている。
@@ -17,9 +39,9 @@
 - 「情報を **通信** し行動を **制御** する」こと自体を機械が行うという考え方が「サイバネティクス」と言われる。
     - この発想が、さまざまな学問に影響を与え世界の機械と人間の融合を加速させた。
 
-計算の自動化 ＋ サイバネティクス
-計算を人間から切り離し、人間そのものを計算させる。
-この営みこそが「メタ」
+> 計算の自動化 ＋ サイバネティクス
+> 計算を人間から切り離し、人間そのものを計算させる。
+> この営みこそが「メタ」
 
 ## 1-3. 人間の知性 ＝ パターンの発見
 
@@ -32,9 +54,10 @@
 - メタバースは、ヒューマンセントリックに情報をパターン化した世界を作ろうとしている。 → パターン化で重要なのは人間の認識の仕方を機械で行う必要がある。
 それにはAIが必要となる。
 
-> **現存するもっともメタバースに近いシステムは脳なのじゃないかと思っている。——— 人類がめざすべき最終的なメタバースのあり方は、全人類の脳をつなげたものなのかもしれない。** 
-> _加藤直人 メタバース　さよならアトムの時代より_  
-> <https://www.amazon.co.jp/dp/B09TT11YPF/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1>
+!!! note
+    > **現存するもっともメタバースに近いシステムは脳なのじゃないかと思っている。——— 人類がめざすべき最終的なメタバースのあり方は、全人類の脳をつなげたものなのかもしれない。** 
+    > _加藤直人 メタバース　さよならアトムの時代より_  
+    > <https://www.amazon.co.jp/dp/B09TT11YPF/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1>
 
 ---
 
