--- a/docs/Notes/0.Metaverse/2.metaverse.md
+++ b/docs/Notes/0.Metaverse/2.metaverse.md
@@ -1,9 +1,16 @@
 # 2. テクノロジーの進化の予測
 
-```prantuml
+```plantuml
+
 @startmindmap
 
+* テクノロジーの本質的特徴
+** 人間を拡張するものであること
+** いずれ人間を教育し始めること
+** 掌から始まり宇宙へと広がっていくこと
+
 @endmindmap
+
 ```
 
 - あらゆるテクノロジーの本質的な特徴
@@ -15,5 +22,3 @@
         - 新しいテクノロジーの普及から時間がたつと、テクノロジーに合わせて生活を変化させる。
         - 必要な情報を人に合わせて提示したりすることが可能になった。ブラウザのサジェストなど
     - ③掌から始まり宇宙へと広がっていくこと
-
-
