--- a/docs/Notes/0.Metaverse/2.metaverse.md
+++ b/docs/Notes/0.Metaverse/2.metaverse.md
@@ -1,24 +1,61 @@
 # 2. テクノロジーの進化の予測
 
+メタバースには限らず、テクノロジーの進化を予測することができれば、  
+今後の自分の将来に何ができるかを見極めて経済的な成功を収まることができるのでないか。
+
 ```plantuml
 
 @startmindmap
+title テクノロジー本質と進化予測
+*[#Orange] テクノロジーの進化の予測
 
-* テクノロジーの本質的特徴
-** 人間を拡張するものであること
-** いずれ人間を教育し始めること
-** 掌から始まり宇宙へと広がっていくこと
+** テクノロジーの本質的特徴
+*** ①人間を拡張するものであること
+*** ②いずれ人間を教育し始めること
+*** ③掌から始まり宇宙へと広がっていくこと
+
+** ダグラス・アダムスの法則
+***_: 子供のころから触れ合う
+テクノロジーから未来予測ができる。;
 
 @endmindmap
 
 ```
 
-- あらゆるテクノロジーの本質的な特徴
-    - ①人間を拡張するものであること
-        - 「1.より深いメタバース」で述べた計算の自動化、機械と人間の融合のように人の能力の拡張を行ってきた。
-        - 蒸気や電力（アトム）といったテクノロジー →「動力革命」
-        - コンピューターは脳内における →「知能革命」
-    - ②いずれ人間を教育し始めること
-        - 新しいテクノロジーの普及から時間がたつと、テクノロジーに合わせて生活を変化させる。
-        - 必要な情報を人に合わせて提示したりすることが可能になった。ブラウザのサジェストなど
-    - ③掌から始まり宇宙へと広がっていくこと
+## あらゆるテクノロジーの本質的な特徴
+
+- **①人間を拡張するものであること**
+    - 「1.より深いメタバース」で述べた計算の自動化、機械と人間の融合のように人の能力の拡張を行ってきた。
+    - 蒸気や電力（アトム）といったテクノロジー →「動力革命」
+    - コンピューターは脳内における →「知能革命」
+- **②いずれ人間を教育し始めること**
+    - 新しいテクノロジーの普及から時間がたつと、テクノロジーに合わせて生活を変化させる。
+    - 必要な情報を人に合わせて提示したりすることが可能になった。ブラウザのサジェストなど
+- **③掌から始まり宇宙へと広がっていくこと**
+    - テクノロジーの発展していく法則性がある。
+        - 人間のもつ機能の拡張は「身体の近く」から始まる。
+        - 武器や靴などの手足の拡張から、車や飛行機、宇宙船まで身体の近くから初めまりテクノロジーの発展によって身体から離れている。
+    - テクノロジーの浸透する法則性がある。
+        - 浸透する順番としては、「消費者（初年度）→ 企業（3～5年後）→ 行政（3～5年後）」へ浸透する。
+        - 意思決定が身軽な順から浸透する。
+
+## 子供のころから触れ合うテクノロジーから未来予測
+
+!!! summary "ダグラス・アダムスの法則"
+    - ダグラス・アダムス（1952-2001）イギリスの脚本家、SF作家 代表作「銀河ヒッチハイクガイドシリーズ」
+    > 人は、自分が生まれたときにすでに存在していたテクノロジーを自然な世界の一部と感じられる。  
+    > 15歳から35歳の間に発明されたテクノロジーに関しては新しくエキサイティングなものとして感じられる。  
+    > 35歳以降になって発明されたテクノロジーは、自然に反するものとして感じられる。  
+
+- 経済的な成功のための適切なタイミングを読む方法として、  
+一部のギーグ（技術オタク）が熱狂していて、それ以外の人がピンと来ていない・理解できないという状態が、取り掛かるタイミングとしてベスト。
+
+- 新しいテクノロジーは「過剰な期待」と「過剰な幻滅」を交互にさらされながら普及していくというサイクル
+
+```mermaid
+stateDiagram
+    過剰な期待 --> 過剰な幻滅
+    過剰な幻滅 --> 過剰な期待
+```
+
+<script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/2965_RC01/embed_loader.js"></script> <script type="text/javascript"> trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"メタバース","geo":"JP","time":"today 12-m"}],"category":0,"property":""}, {"exploreQuery":"q=%E3%83%A1%E3%82%BF%E3%83%90%E3%83%BC%E3%82%B9&geo=JP&date=today 12-m","guestPath":"https://trends.google.co.jp:443/trends/embed/"}); </script>
