--- a/docs/Notes/0.Metaverse/2.metaverse.md
+++ b/docs/Notes/0.Metaverse/2.metaverse.md
@@ -58,4 +58,10 @@ stateDiagram
     過剰な幻滅 --> 過剰な期待
 ```
 
-<script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/2965_RC01/embed_loader.js"></script> <script type="text/javascript"> trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"メタバース","geo":"JP","time":"today 12-m"}],"category":0,"property":""}, {"exploreQuery":"q=%E3%83%A1%E3%82%BF%E3%83%90%E3%83%BC%E3%82%B9&geo=JP&date=today 12-m","guestPath":"https://trends.google.co.jp:443/trends/embed/"}); </script>
+- 現在は幻滅期入っていると思われる。
+
+- 全世界のトレンド推移
+![img](img/20220531_215251.png)
+
+- 日本でのトレンド推移
+![img](img/20220531_215530.png)
