--- a/docs/Notes/0.Metaverse/2.metaverse.md
+++ b/docs/Notes/0.Metaverse/2.metaverse.md
@@ -65,3 +65,5 @@ stateDiagram
 
 - 日本でのトレンド推移
 ![img](img/20220531_215530.png)
+
+google検索トレンドの結果を記載（2022/05/31時点）<https://trends.google.co.jp/trends/?geo=JP>
